tests/rgs/syntax_errors/event_missing_origin.rgs
STORY DEFAULT.
    AGENT Guard:
        ACTION patrol.
        EVENT idle.
        DURING ALWAYS:
            WHEN idle MYSELF:
                DO patrol.
